{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 62,
  "lineage": "2f19d4e0-f3a3-840d-6d86-b394528fbdc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-0fb381382a03d6ceb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fb381382a03d6ceb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "462068371076-dev-ops-additional20220127135131736200000008",
            "name_prefix": "462068371076-dev-ops-additional",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_mediasoup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-0b0e8ad71c1165216",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b0e8ad71c1165216",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "462068371076-dev-ops-mediasoup20220128084020023500000001",
            "name_prefix": "462068371076-dev-ops-mediasoup",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-074d522740820a10c",
            "description": "Allos inbound efs traffic from EKS node",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0767ad0acd46f4616",
                  "sg-094fb4c742c4c87dc"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074d522740820a10c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0767ad0acd46f4616",
                  "sg-094fb4c742c4c87dc"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.key",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-0c2c61f402120463e",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094fb4c742c4c87dc"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094fb4c742c4c87dc"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0c2c61f402120463e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094fb4c742c4c87dc"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "462068371076-dev-ops-eks-cluster-20220127135131715800000007",
            "name_prefix": "462068371076-dev-ops-eks-cluster-",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "462068371076-dev-ops-eks-cluster",
              "environment": "dev",
              "karpenter.sh/discovery": "462068371076-dev-ops-eks",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-eks-cluster",
              "environment": "dev",
              "karpenter.sh/discovery": "462068371076-dev-ops-eks",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-094fb4c742c4c87dc",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2c61f402120463e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-094fb4c742c4c87dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2c61f402120463e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2c61f402120463e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "462068371076-dev-ops-eks-node-20220127135131741400000009",
            "name_prefix": "462068371076-dev-ops-eks-node-",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "462068371076-dev-ops-eks-node",
              "environment": "dev",
              "karpenter.sh/discovery": "462068371076-dev-ops-eks",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "owned",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-eks-node",
              "environment": "dev",
              "karpenter.sh/discovery": "462068371076-dev-ops-eks",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "owned",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1672816241",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c2c61f402120463e",
            "self": false,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-873327205",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c2c61f402120463e",
            "self": false,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2104848853",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c2c61f402120463e",
            "self": false,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2490070734",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": false,
            "source_security_group_id": "sg-0c2c61f402120463e",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-906537700",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3923154938",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2538124023",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1037022154",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": true,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3014144428",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": true,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3444375540",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": false,
            "source_security_group_id": "sg-0c2c61f402120463e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3150962746",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": false,
            "source_security_group_id": "sg-0c2c61f402120463e",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-563634500",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": true,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2244461227",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-094fb4c742c4c87dc",
            "self": true,
            "source_security_group_id": "sg-094fb4c742c4c87dc",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"mng_addon\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-0118187859f273d2c",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0118187859f273d2c",
            "ingress": [],
            "name": "mng_addon-eks-node-group-2022012713513835210000000b",
            "name_prefix": "mng_addon-eks-node-group-",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mng_addon-eks-node-group",
              "environment": "dev",
              "karpenter.sh/discovery": "462068371076-dev-ops-eks",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "mng_addon-eks-node-group",
              "environment": "dev",
              "karpenter.sh/discovery": "462068371076-dev-ops-eks",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ng_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-0c5b7e4918ab82f98",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0c5b7e4918ab82f98",
            "ingress": [],
            "name": "mng-app-eks-node-group-20220128072554363100000005",
            "name_prefix": "mng-app-eks-node-group-",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mng-app-eks-node-group",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "mng-app-eks-node-group",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.key",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ng_media",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-032e1d7fcea6ef508",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-032e1d7fcea6ef508",
            "ingress": [],
            "name": "mng-mediasoup-eks-node-group-20220128072554343900000001",
            "name_prefix": "mng-mediasoup-eks-node-group-",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mng-mediasoup-eks-node-group",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "mng-mediasoup-eks-node-group",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.key",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ng_mixer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:security-group/sg-040b1e349ba4dac2c",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-040b1e349ba4dac2c",
            "ingress": [],
            "name": "mng-mediasoup-eks-node-group-20220128072554349400000002",
            "name_prefix": "mng-mediasoup-eks-node-group-",
            "owner_id": "462068371076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mng-mediasoup-eks-node-group",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "mng-mediasoup-eks-node-group",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.key",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes-addons.module.prometheus[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "annotations": {
                  "cattle.io/status": "{\"Conditions\":[{\"Type\":\"ResourceQuotaInit\",\"Status\":\"True\",\"Message\":\"\",\"LastUpdateTime\":\"2022-02-08T05:09:45Z\"},{\"Type\":\"InitialRolesPopulated\",\"Status\":\"True\",\"Message\":\"\",\"LastUpdateTime\":\"2022-02-08T05:09:45Z\"}]}",
                  "lifecycle.cattle.io/create.namespace-auth": "true"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/managed-by": "terraform-ssp-amazon-eks"
                },
                "name": "monitoring",
                "resource_version": "5181824",
                "uid": "afffda3a-01f2-4c30-8da1-bdc84b73f486"
              }
            ]
          },
          "dependencies": [
            "module.efs.aws_efs_file_system.efs",
            "module.efs.aws_efs_mount_target.efs-mt",
            "module.efs.aws_security_group.efs",
            "module.efs.data.aws_availability_zones.available",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09607a20d2e28c0b0",
            "association_id": "eipassoc-03b1fd5dd32e3efd1",
            "domain": "vpc",
            "id": "eipalloc-09607a20d2e28c0b0",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0c412b4063e4b806a",
            "private_dns": "ip-10-10-0-78.eu-west-2.compute.internal",
            "private_ip": "10.10.0.78",
            "public_dns": "ec2-18-134-66-128.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.66.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-eu-west-2a",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-eu-west-2a",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:internet-gateway/igw-02e2f387650a59416",
            "id": "igw-02e2f387650a59416",
            "owner_id": "462068371076",
            "tags": {
              "Name": "462068371076-dev-ops-vpc",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09607a20d2e28c0b0",
            "connectivity_type": "public",
            "id": "nat-07e6aab678aa1f30c",
            "network_interface_id": "eni-0c412b4063e4b806a",
            "private_ip": "10.10.0.78",
            "public_ip": "18.134.66.128",
            "subnet_id": "subnet-0f4d84020cfe352f7",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-eu-west-2a",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-eu-west-2a",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0667c27dd4663c2581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07e6aab678aa1f30c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0667c27dd4663c258",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e2f387650a59416",
            "id": "r-rtb-0e9366b2c1c359c621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9366b2c1c359c62",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:route-table/rtb-0667c27dd4663c258",
            "id": "rtb-0667c27dd4663c258",
            "owner_id": "462068371076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07e6aab678aa1f30c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "462068371076-dev-ops-vpc-private",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-private",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:route-table/rtb-0e9366b2c1c359c62",
            "id": "rtb-0e9366b2c1c359c62",
            "owner_id": "462068371076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e2f387650a59416",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "462068371076-dev-ops-vpc-public",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-public",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0936571b01c6c3580",
            "route_table_id": "rtb-0667c27dd4663c258",
            "subnet_id": "subnet-044a2b84ce8b24885"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e29031849af6cd3f",
            "route_table_id": "rtb-0667c27dd4663c258",
            "subnet_id": "subnet-05429611be9e990f5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2d237222466c68f",
            "route_table_id": "rtb-0667c27dd4663c258",
            "subnet_id": "subnet-017c07b88b48eb51f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0274449aab2bda916",
            "route_table_id": "rtb-0e9366b2c1c359c62",
            "subnet_id": "subnet-0f4d84020cfe352f7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbf8d3fb4ba88eca",
            "route_table_id": "rtb-0e9366b2c1c359c62",
            "subnet_id": "subnet-00a2172c7548f0f62"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0692b6a3db30b4fb0",
            "route_table_id": "rtb-0e9366b2c1c359c62",
            "subnet_id": "subnet-0c94e7e5c66eddadd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:subnet/subnet-044a2b84ce8b24885",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044a2b84ce8b24885",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462068371076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-private-eu-west-2a",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-private-eu-west-2a",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:subnet/subnet-05429611be9e990f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05429611be9e990f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462068371076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-private-eu-west-2b",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-private-eu-west-2b",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:subnet/subnet-017c07b88b48eb51f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017c07b88b48eb51f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462068371076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-private-eu-west-2c",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-private-eu-west-2c",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:subnet/subnet-0f4d84020cfe352f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4d84020cfe352f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462068371076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-public-eu-west-2a",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-public-eu-west-2a",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:subnet/subnet-00a2172c7548f0f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a2172c7548f0f62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462068371076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-public-eu-west-2b",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-public-eu-west-2b",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:subnet/subnet-0c94e7e5c66eddadd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94e7e5c66eddadd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462068371076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "462068371076-dev-ops-vpc-public-eu-west-2c",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc-public-eu-west-2c",
              "environment": "dev",
              "kubernetes.io/cluster/462068371076-dev-ops-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "vpc_id": "vpc-03bfe955d560ff194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462068371076:vpc/vpc-03bfe955d560ff194",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a40b8b0815b63e2c",
            "default_route_table_id": "rtb-0276f6aeeab4689f4",
            "default_security_group_id": "sg-06cb6bd3dab0d00e1",
            "dhcp_options_id": "dopt-07c99e6f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03bfe955d560ff194",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0276f6aeeab4689f4",
            "owner_id": "462068371076",
            "tags": {
              "Name": "462068371076-dev-ops-vpc",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            },
            "tags_all": {
              "Name": "462068371076-dev-ops-vpc",
              "environment": "dev",
              "project": "Minh",
              "provision_by": "Terraform",
              "tenant": "462068371076",
              "terraform_version": "v1.1.2",
              "zone": "ops"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}